--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,46 @@
-header {
-  border-image: "assets/lab-assets/hr-img.png";
-  border-width: 100%;
+/* header {
+  border-image-source: url(hr-img.png);
+  border-bottom: 10px; 
+  border-image-repeat: repeat;
+} */
+
+.hr {
+  background: url(hr-img.png);
+  height: 12px;
+  border: none;
 }
+
 body {
-  padding-left: 20px;
-  padding-right: 20px;
+  /* padding-left: 40px;
+  padding-right: 40px; */
+  margin-right: 25%;
+  margin-left: 25%;
+}
+/* 
+.logo::first-line{
+  font-size:x-large;
+  color: yellowgreen;
+} */
+
+.logo p::first-line {
+  font-size: xx-large;
+  font-family: 'Euphoria Script', cursive;
+  font-family: 'Great Vibes', cursive;
+}
+
+.pizza p::first-line {
+  font-size: xxx-large;
+  font-family: fantasy;
+}
+
+.text p::first-line {
+  text-indent: 20px;
 }
 
 .logo {
   display: inline-block;
 }
+
 .logos2 {
   float: right;
   margin-top: 10px;
@@ -18,10 +49,26 @@ body {
 
 .ingredients {
   justify-content: center;
+  background-image: url(assets/lab-assets/list-bg.png);
 }
 .ingredients ul {
+  display: inline-block;
   padding-left: 100px;
-  float: left;
+  /* float: left; */
   list-style-type: square;
   justify-content: center;
+}
+
+.bio {
+  display: inline-block;
+}
+
+.button{
+  float: right;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+footer {
+  display: block;
 }
